fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,13 @@ a {
 .container {
 	width: 100%;
 	max-width: 980px;
-	margin: 0 auto;
-	padding: 0 15px;
 }
 
 @media only screen and (min-width: 1024px) {
 	.container {
 		width: 80%;
+		margin: 0 auto;
+		padding: 0 15px;
 	}
 }
 nav {
@@ -79,8 +79,8 @@ header {
 h1 {
 	font-size: 54px;
 	font-family: 'Lora', serif;
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	text-align: center;
 }
 
@@ -92,8 +92,8 @@ h1 {
 h2 {
 	font-size: 26px;
 	font-weight: 400;
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	text-align: center;
 }
 
